fix : fixed background color and hero path

--- a/components/BlogPages/myFirstBlog.html
+++ b/components/BlogPages/myFirstBlog.html
@@ -18,34 +18,15 @@
         </ul>
     </nav>
     <header class="hero">
-        <img class="hero-image" src="images/HeaderImage.svg" />
+        <img class="hero-image" src="/Images/HeaderImage.svg" />
         <h1 class="hero-heading">Welcome<span class="hero-span">To my blog page</span></h1>
     </header>
 
-    <Section class="section section-ow">
+    <Section class="section">
         <div class="container container-center">
             <h1>My 1st blog</h1>
             <p>
-                Blog Comming soon... 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                ~
+                Blog Comming soon...
             </p>
             
         </div>
