Feat added my 1st blog

--- a/components/BlogPages/myFirstBlog.html
+++ b/components/BlogPages/myFirstBlog.html
@@ -26,7 +26,31 @@
         <div class="container container-center">
             <h1>My 1st blog</h1>
             <p>
-                Blog Comming soon...
+                Hi I am Tushar, this blog is about how I got to know about Neog camp and how decided to start my journey as a web developer.
+            </p>
+            <p>
+                I live in Nagpur, Maharashtra. I did my engineering in CSE branch from a private enginerring college. Even after 4 years of college I never got to learn much coding.
+                Even after 4 years I was just able to do basic programs in c, c++ and Java.
+                As I knew some java I tried to learn android development in which I learned about xml and a little bit about front end but as no one around me was doing it I lost the motivation to learn more about ASndroid development.
+            </p>
+            <p>As I was a average student I managed to get a job at TCS as Asistent systen Engineer trainee, initially I was really happy that I got a job at such a huge organization but they put me into QA there even though I already expressed my intrest in software development to HR. I QA there was no automation testing, we just had manual testing there so my job was just to run the application and make sure that I changes made by developer were working fine.
+                At start it felt easy and there was not much presure and over time the job got very redundant and so I talked with my manager for shifting into development team, after 3-4 months of requesting I finally got to work in a java development team.
+            </p>
+            <P>
+                In development also we were working on java Struts framework which is considered to be outdated. But to be honest I was not a very good developer but being able to work in development team helped me imporving my logic building and problem solving skills and I think I have improved very much here.
+            </P>
+            <p>
+                But After a while I started thinging about long term, if I should continue here or not, do I have a future 5 years down the line.
+                I looked at my collegues who had 5-6 years of Experience and I got a feeling that I dont want to be in the same position after 5 years.
+                So I started to look on internet that what is trending now a days and I came across data Analytics and Data science, at that time it seemed very attractive.
+                so I started to learn python and Pandas library for data cleaning and manupulation but at that this multiple time I got the recomendation of "UI vs AI" video of Tanay sir.you can find this video
+                <a  href="https://www.youtube.com/watch?v=oZhXwCEBmmk">here</a>.
+                So after ignoring it 2-3 times I finally watched it and what Tanay sir said in that video mada a lot of sense to me so I lookup Tanay sir and got to know about his youtube channel.
+            </p>
+            <p>
+                Form there I got to know about level one and by the time I got to know about it, level 1 batch was already started.
+                So I completed level 0 now and I think that there is a lot to improve like I get very confuse while doing styling and have a hard time selecting colors and all. I hope that I get into level 1 batch now as I think I really need it in my career now as there no other platform as level 1 around which can take any person and make a competent web developer out of him/her.
+                I feel that what Tanay sir is doing for people like is nothing less than a boon and I hope that I will be woring on the latest technology in industry and have a great career ahead.
             </p>
             
         </div>
