feat : added footer in all files

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,11 @@ nav-brand {
     text-align: right;
 }
 
+.navigation .list-social-media{
+    text-align: left;
+}
+
+
 /** Hero **/
 .hero {
     padding: 2rem;
