feat : added portfolio building blog

--- a/components/BlogPages/BuildingMyPortfolio.html
+++ b/components/BlogPages/BuildingMyPortfolio.html
@@ -26,7 +26,37 @@
         <div class="container container-center">
             <h1>Building my portfolio</h1>
             <p>
-                Blog Comming soon...
+                Welcome everyone, in this blog I am going to speak about how I built this blog.
+                I am personally not very creativity and I have dissiulty in choosing colors and design of a page.
+                So to overcome this problem I first made a component library which contained all the elements of my web page in one place.
+                to check out my component library <a href="/components/components.html">click here.</a>  
+            </p>
+            <p>
+                In my component library, first I have a navigation element which holds the title of my app.
+                In side navigation I am using a list element to display navigation links like home, porject, blogs etc.
+                which user can use to navigate my portfolio easily.
+                after this I have a hero element which is nothing but an image. It add a visual element to my home page and sets the theme of my portfolio.
+                It is an .svg file that means I can scale it large witdth and height without compromisiong the quality of image. 
+                You can go on to <a href="https://undraw.co/illustrations">https://undraw.co/illustrations</a> to download a free image they have a many option available for free.
+            </p>
+            <p>
+                After this I wanted to have various sections like technalogies, proejct and blogs, so for this I added two div elements and what we add this this div will me one section.
+                kept the background color of both os this div different so that it will appear as different section.
+                for color as well I have kept background white and only one primary color so that my portfolio looks simple.
+            </p>
+            <p>
+                Once sections are done then only footer element was left. footer is the section which can pe use to keep contact information, and any copy right info.
+                I have used this footer element for displaying my social media handels on all pages of my portfolio.
+            </p>
+            <p>
+                Once the component library is completed then for all other pages its just like assembeling peices of a puzzle.
+                In every page My Navigation and footer is same. On home page I have 3 sections which shows the technalogy I know, my projects and blogs.
+                In each div I have a heading and short description. I projects and blogs section I have a link as well to navigate user to project/blog pages.
+            </p>
+            <p>
+                On the project, every section display a heading, short description of projects and link to access source code and the live site link. In this page also navigation and footer is same.
+                Similarly on blogs page I have list of blogs and an link to the respective blog so that user can navigate easily.
+                So once the component library is ready only content is different in each page, following this way makes it very easy to make a website.
             </p>
             
         </div>
